force-app/main/default/objects/breadwinner_qbo__Payment_Transaction__c/breadwinner_qbo__Payment_Transaction__c.object-meta.xml
<CustomObject>
    <description>Junction object (Transactions) between Invoices and Payments</description>
    <label>Payment Transaction</label>
    <nameField>
        <label>Payment Transaction Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>