force-app/main/default/objects/breadwinner_qbo__Payment_Transaction__c/fields/breadwinner_qbo__Invoice__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Invoice__c</fullName>
    <description>Invoice related to the transaction</description>
    <label>Invoice</label>
    <referenceTo>breadwinner_qbo__Invoice__c</referenceTo>
    <relationshipLabel>Payment Transactions</relationshipLabel>
    <relationshipName>Payment_Transactions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>