force-app/main/default/objects/breadwinner_qbo__Payment_Transaction__c/fields/breadwinner_qbo__Payment__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Payment__c</fullName>
    <description>Payment for the Transaction</description>
    <label>Payment</label>
    <referenceTo>breadwinner_qbo__Payment__c</referenceTo>
    <relationshipLabel>Payment Transactions</relationshipLabel>
    <relationshipName>Payment_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>