force-app/main/default/objects/breadwinner_qbo__Payment_Transaction__c/fields/breadwinner_qbo__Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Payment_Date__c</fullName>
    <description>Payment Date of the related Payment</description>
    <formula>breadwinner_qbo__Payment__r.breadwinner_qbo__Payment_Date__c</formula>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>