force-app/main/default/objects/breadwinner_qbo__Payment_Transaction__c/fields/breadwinner_qbo__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Payment_Method__c</fullName>
    <formula>breadwinner_qbo__Payment__r.breadwinner_qbo__Payment_Method__c</formula>
    <label>Payment Method</label>
    <type>Text</type>
</CustomField>