force-app/main/default/objects/breadwinner_qbo__Payment_Transaction__c/listViews/breadwinner_qbo__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_qbo__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_qbo__Invoice__c</columns>
    <columns>breadwinner_qbo__Payment__c</columns>
    <columns>breadwinner_qbo__Payment_Date__c</columns>
    <columns>breadwinner_qbo__Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>